Fix links not wrapping on small devices

--- a/src/scss/ionic.app.scss
+++ b/src/scss/ionic.app.scss
@@ -31,6 +31,7 @@ $font-family-base: "Roboto", sans-serif !default;
     color: #387ef5;
     text-decoration: underline;
     cursor: pointer;
+    word-break: break-word
 }
 
 textarea {
